adopt safe command-line composition